<resources>
    <string name="app_name">Age In Minutes Calculator</string>
    <string name="calculate_your">Calculate Your</string>
    <string name="age">Age</string>
    <string name="in_minutes">In Minutes</string>
    <string name="select_date">Select Date</string>
    <string name="selected_date">Selected Date</string>
    <string name="in_minutes_till_date">In Minutes till date</string>
</resources>